# TerrApp

./: .gitignore
Refino/: Countainers.h
TopETerr/: CMakeLists.txt  NotasTecnicas.md  main.cpp  terrapleno.cpp  terrapleno.h  terrapleno.ui
TopETerr/TerraCore/: CMakeLists.txt  adaptadorPontos.h  arquiteturaterracore.qmt  banco_segmentos.h  calculo.h  formatEstrito.h  geometria.cpp  geometria.h  geometria_base.h  laboratorio.h  linkserialbase.cpp  linkserialbase.h  motorArquivoFixo.h  ponto.h  quadTree.cpp  quadTree.h  superficie.cpp  superficie.h  terracore.cpp  terracore.h  terraio.cpp  terraio.h  tracado.h
TopETerr/TerraIO/: CMakeLists.txt  leitor.h
TopETerr/TerraView/: CMakeLists.txt  painelCad.cpp  painelCad.h
